@@ -15,6 +15,9 @@ Change Log:
 - Other minor bug/notice fixes
 - Forced shipping option recalculation when Country changes.
 - Fix missing closing tag in global widget breaking drag and drop
+- Fix shipping settings save filter for method plugins
+- Error check in Manual Payments gateway: http://premium.wpmudev.org/forums/topic/bug-with-manual-payment
+- Fixed 10525 Paypal errors in global cart checkouts
 
 2.7 - 10/03/2012 - Aaron Edwards
 ----------------------------------------------------------------------
